--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/noinkling/node-cryptopan#readme",
   "devDependencies": {
+    "@leichtgewicht/ip-codec": "^2.0.3",
     "@types/node": "16",
     "typescript": "~4.5.4"
   }
