--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "node ./dist/test.js"
+    "test": "node ./dist/test/test.js"
   },
   "repository": {
     "type": "git",
